# main-webbase/docs/swagger.json
@@ -9,65 +9,6 @@
     "host": "localhost:8000",
     "basePath": "/",
     "paths": {
-        "/abilities": {
-            "get": {
-                "description": "Returns allowed actions for the user in the given org_path",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "abilities"
-                ],
-                "summary": "Get user abilities",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Organization Path",
-                        "name": "org_path",
-                        "in": "query",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/dto.AbilitiesResponse"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
-                        }
-                    },
-                    "401": {
-                        "description": "Unauthorized",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
-                        }
-                    }
-                }
-            }
-        },
         "/event": {
             "get": {
                 "description": "Return all events that the current user can see",
@@ -283,7 +224,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.Membership"
+                            "$ref": "#/definitions/models.MembershipRequestDTO"
                         }
                     }
                 ],
@@ -291,7 +232,7 @@
                     "200": {
                         "description": "membership created",
                         "schema": {
-                            "$ref": "#/definitions/models.Membership"
+                            "$ref": "#/definitions/models.MembershipRequestDTO"
                         }
                     },
                     "400": {
@@ -767,23 +708,6 @@
         }
     },
     "definitions": {
-        "dto.AbilitiesResponse": {
-            "type": "object",
-            "properties": {
-                "abilities": {
-                    "type": "object",
-                    "additionalProperties": {
-                        "type": "boolean"
-                    }
-                },
-                "org_path": {
-                    "type": "string"
-                },
-                "version": {
-                    "type": "string"
-                }
-            }
-        },
         "dto.ErrorResponse": {
             "type": "object",
             "properties": {
@@ -977,9 +901,6 @@
                 "constraints": {
                     "$ref": "#/definitions/models.Constraints"
                 },
-                "created_at": {
-                    "type": "string"
-                },
                 "display": {
                     "type": "object",
                     "additionalProperties": {
@@ -998,12 +919,6 @@
                                 "type": "string"
                             }
                         },
-                        "created_at": {
-                            "type": "string"
-                        },
-                        "effect": {
-                            "type": "string"
-                        },
                         "enabled": {
                             "type": "boolean"
                         },
@@ -1020,9 +935,6 @@
                     "$ref": "#/definitions/models.Scope"
                 },
                 "status": {
-                    "type": "string"
-                },
-                "updated_at": {
                     "type": "string"
                 }
             }
@@ -1096,31 +1008,16 @@
                 }
             }
         },
-        "models.Membership": {
+        "models.MembershipRequestDTO": {
             "type": "object",
             "properties": {
                 "active": {
                     "type": "boolean"
                 },
-                "created_at": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "string"
-                },
-                "org_ancestors": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
-                },
                 "org_path": {
                     "type": "string"
                 },
                 "position_key": {
-                    "type": "string"
-                },
-                "updated_at": {
                     "type": "string"
                 },
                 "user_id": {
