# main-webbase/internal/models/membership.go
@@ -15,3 +15,10 @@ type Membership struct {
 	CreatedAt    time.Time            `bson:"created_at" json:"created_at"`
 	UpdatedAt    time.Time            `bson:"updated_at,omitempty" json:"updated_at,omitempty"`
 }
+
+type MembershipRequestDTO struct {
+	UserID       string 		      `bson:"user_id" json:"user_id"`
+	OrgPath      string               `bson:"org_path" json:"org_path"`
+	PositionKey  string               `bson:"position_key" json:"position_key"`
+	Active       bool                 `bson:"active" json:"active"`
+}
