# main-webbase/internal/routes/ability_routes.go
@@ -1,19 +1,19 @@
 package routes
 
-import (
-	"github.com/gofiber/fiber/v2"
-	"main-webbase/internal/controllers"
-	"main-webbase/internal/repository"
-	"main-webbase/internal/services"
-)
+// import (
+// 	"github.com/gofiber/fiber/v2"
+// 	"main-webbase/internal/controllers"
+// 	"main-webbase/internal/repository"
+// 	"main-webbase/internal/services"
+// )
 
-func SetupRoutesAbility(app *fiber.App) {
-	mRepo := repository.NewMembershipRepository()
-	pRepo := repository.NewPolicyRepository()
+// func SetupRoutesAbility(app *fiber.App) {
+// 	mRepo := repository.NewMembershipRepository()
+// 	pRepo := repository.NewPolicyRepository()
 
-	authzService := services.NewAuthzService(mRepo, pRepo)
-	h := controllers.NewAbilitiesHandler(authzService)
+// 	authzService := services.NewAuthzService(mRepo, pRepo)
+// 	h := controllers.NewAbilitiesHandler(authzService)
 
-	abilities := app.Group("/abilities")
-	abilities.Get("/:userId", h.GetAbilities)
-}
+// 	abilities := app.Group("/abilities")
+// 	abilities.Get("/:userId", h.GetAbilities)
+// }
